fix list participant on tablet

--- a/application/src/main/webapp/css/components/chatContact.less
+++ b/application/src/main/webapp/css/components/chatContact.less
@@ -9,7 +9,6 @@
   &, .contactDetail {
     flex: 1;
     width: 0;
-    overflow: hidden;
   }
   .contactDetail {
     margin-left: 10px;
