--- a/application/src/main/webapp/css/variables.less
+++ b/application/src/main/webapp/css/variables.less
@@ -33,7 +33,10 @@
 @defaultShadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
 /* borde & shadow */
 
-
+/* Responsive */
+@mobile: 767px;
+@tablet: 1024px;
+/* Responsive */
 
 @emoticonsSize: 24px;
 
